// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders main branch 1`] = `
<li
  key="master"
  onMouseEnter={[Function]}
>
  <Tooltip
    mouseEnterDelay={0.5}
    overlay="master"
    placement="right"
  >
    <Link
      className="navbar-context-meta-branch-menu-item"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "id": "component",
          },
        }
      }
    >
      <div
        className="navbar-context-meta-branch-menu-item-name text-ellipsis"
      >
        <BranchIcon
          branch={
            Object {
              "isMain": true,
              "name": "master",
            }
          }
          className="little-spacer-right"
        />
        master
        <div
          className="outline-badge spacer-left"
        >
          branches.main_branch
        </div>
      </div>
      <div
        className="big-spacer-left note"
      >
        <BranchStatus
          branch={
            Object {
              "isMain": true,
              "name": "master",
            }
          }
          concise={true}
        />
      </div>
    </Link>
  </Tooltip>
</li>
`;

exports[`renders short-living branch 1`] = `
<li
  key="foo"
  onMouseEnter={[Function]}
>
  <Tooltip
    mouseEnterDelay={0.5}
    overlay="foo"
    placement="right"
  >
    <Link
      className="navbar-context-meta-branch-menu-item"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/issues",
          "query": Object {
            "branch": "foo",
            "id": "component",
            "resolved": "false",
          },
        }
      }
    >
      <div
        className="navbar-context-meta-branch-menu-item-name text-ellipsis"
      >
        <BranchIcon
          branch={
            Object {
              "isMain": false,
              "mergeBranch": "master",
              "name": "foo",
              "status": Object {
                "bugs": 1,
                "codeSmells": 2,
                "vulnerabilities": 3,
              },
              "type": "SHORT",
            }
          }
          className="little-spacer-right big-spacer-left"
        />
        foo
      </div>
      <div
        className="big-spacer-left note"
      >
        <BranchStatus
          branch={
            Object {
              "isMain": false,
              "mergeBranch": "master",
              "name": "foo",
              "status": Object {
                "bugs": 1,
                "codeSmells": 2,
                "vulnerabilities": 3,
              },
              "type": "SHORT",
            }
          }
          concise={true}
        />
      </div>
    </Link>
  </Tooltip>
</li>
`;

exports[`renders short-living orhpan branch 1`] = `
<li
  key="foo"
  onMouseEnter={[Function]}
>
  <Tooltip
    mouseEnterDelay={0.5}
    overlay="foo"
    placement="right"
  >
    <Link
      className="navbar-context-meta-branch-menu-item"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/issues",
          "query": Object {
            "branch": "foo",
            "id": "component",
            "resolved": "false",
          },
        }
      }
    >
      <div
        className="navbar-context-meta-branch-menu-item-name text-ellipsis"
      >
        <BranchIcon
          branch={
            Object {
              "isMain": false,
              "isOrphan": true,
              "mergeBranch": "master",
              "name": "foo",
              "status": Object {
                "bugs": 1,
                "codeSmells": 2,
                "vulnerabilities": 3,
              },
              "type": "SHORT",
            }
          }
          className="little-spacer-right"
        />
        foo
      </div>
      <div
        className="big-spacer-left note"
      >
        <BranchStatus
          branch={
            Object {
              "isMain": false,
              "isOrphan": true,
              "mergeBranch": "master",
              "name": "foo",
              "status": Object {
                "bugs": 1,
                "codeSmells": 2,
                "vulnerabilities": 3,
              },
              "type": "SHORT",
            }
          }
          concise={true}
        />
      </div>
    </Link>
  </Tooltip>
</li>
`;
